# MirageSDK

./: .gitignore  CMakeLists.txt  LICENSE  README.md
bindings/python/: setup.py
bindings/python/src/Mirage/: Mirage.py
bindings/python/src/Mirage.egg-info/: PKG-INFO  SOURCES.txt
example/cpp/: CMakeLists.txt  DemoOverlay.cpp  DemoOverlay.hpp  SampleApp.cpp  SampleLayer.cpp  SampleLayer.hpp
example/python/: DemoApp.py  DemoLayer.py  DemoOverlay.py
inc/: MirageAnimation.hpp  MirageApplication.hpp  MirageAudioBuffer.hpp  MirageAudioListener.hpp  MirageAudioSource.hpp  MirageAudioUtils.hpp  MirageButton.hpp  MirageCamera.hpp  MirageComponent.hpp  MirageFont.hpp  MirageImage.hpp  MirageInput.hpp  MirageInputCode.hpp  MirageLog.hpp  MirageMaterial.hpp  MirageMeshFilter.hpp  MirageMeshRenderer.hpp  MirageModel.hpp  MirageObject.hpp  MirageObserver.hpp  MirageText.hpp  MirageThreadPool.hpp  MirageTransform.hpp  MirageVertexBoneInfo.hpp  base_app.hpp  base_event.hpp  base_layer.hpp  common_def.hpp  mirage_result.hpp
