###################################################################################################
cmake_minimum_required(VERSION 3.21)

project(Mirage)
set(CMAKE_CXX_STANDARD 20)
###################################################################################################
set(MIRAGE_SDK_PATH "${CMAKE_CURRENT_SOURCE_DIR}" CACHE FILEPATH "Cache the sdk path.")
###################################################################################################
# build example
add_subdirectory(example/cpp)
###################################################################################################